@@ -1,6 +1,7 @@
 Open Vehicle Monitor System v3 - Change log
 
 ????-??-?? ???  ???????  OTA release
+- MG ZS EV: Add new features page to select car's BMS firmware release to adjust SOC display.
 - New vehicle: Maxus eDeliver 3 via OBD-II Port (MED3)
   https://docs.openvehicles.com/en/latest/components/vehicle_maxus_edeliver3/docs/index.html
 - Vehicle: emit standard events on changing v.c.timermode
